[package]
name = "superteam"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
k256 = "0.11"
rand = "0.8"
bs58 = "0.5"
base64 = "0.22"
env_logger = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }